traefik-ingress/client-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: webserver-nginx-svc-clusterip
  name: webserver-nginx-svc-clusterip
spec:
  ports:
    # The port that this service should serve on.
    - port: 80
  # Label keys and values that must match in order to receive traffic for this service.
  selector:
    app: webserver-nginx
    namespace: poc
  type: ClusterIP
