traefik-ingress/traefik-service.yaml
apiVersion: v1  
kind: Service  
metadata:  
 name: traefik-web-ui
spec:  
 selector:
   k8s-app: traefik-ingress-lb
 ports:
 - port: 80
   targetPort: 8080
