traefik-ingress/client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webserver-nginx-ingress
spec:
  rules:
  - host: webserver-nginx.k8s.eclair.msepehr.com
    http:
      paths:
      - path: /
        backend:
          serviceName: webserver-nginx-svc-clusterip 
          servicePort: 80
