traefik-ingress/traefik-ingresscontroller.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
 name: traefik-web-ui
 annotations:
   kubernetes.io/ingress.class: traefik
spec:  
 rules:
 - host: "k8s.msepehr.com"
   http:
     paths:
     - backend:
         serviceName: traefik-web-ui
         servicePort: 80
